--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>payment</artifactId>
     <version>1.0</version>
     <name>Payment</name>
+    <packaging>war</packaging>
     <description>Demo project for Spring Boot-Payment</description>
 
     <properties>
@@ -53,9 +54,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>Payment</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
